samples/_failures_safe/1761171573_bba320_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9eff7865.c:188:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  188 | void free
      | ^~~~
